--- a/d/de/des/desipics4u.com.html
+++ b/d/de/des/desipics4u.com.html
@@ -1,19 +1,25 @@
-<!--The following is the downloaded HTML source of the desipics4u.com privacy policy that was archived on 2009-06-21.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090621143245id_/http%3A//www.desipics4u.com/info.php%3Fact%3Dprivacy_policy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the desipics4u.com privacy policy that was archived on 2009-10-03.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20091003101530id_/http%3A//www.desipics4u.com/info.php%3Fact%3Dprivacy_policy) for the most accurate reproduction.-->
 
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/2002/REC-xhtml1-20020801/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml" dir="ltr" lang="en-gb" xml:lang="en-gb"><head>
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<meta http-equiv="Content-Style-Type" content="text/css">
-<meta http-equiv="Content-Language" content="en-gb">
-<meta http-equiv="imagetoolbar" content="no">
-<title>Desi Pics 4 U » More Information » Privacy Policy</title>
-<meta name="keywords" content="image hosting, image hosting service, multiple image hosting, unlimited bandwidth, quick image hosting">
-<meta name="description" content="Desi Pics 4 U is an easy image hosting solution for everyone.">
-<base href="http://www.desipics4u.com/">
-<link href="css/style.css" rel="stylesheet" type="text/css" media="screen">
-<link rel="shortcut icon" href="css/images/favicon.ico">
-<script type="text/javascript" src="http://www.google-analytics.com/urchin.js"></script>
-<script type="text/javascript" src="source/includes/genjscript.js"></script>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml" dir="ltr" lang="en-us" xml:lang="en-us"><head>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <meta http-equiv="Content-Style-Type" content="text/css">
+    <meta http-equiv="Content-Language" content="en-us">
+    <meta http-equiv="imagetoolbar" content="no">
+    <title>Desi Pics 4 U » More Information » Privacy Policy</title>
+    <meta name="version" content="Mihalism Multi Host v5.0.1">
+    <meta name="description" content="Desi Pics 4 U is an easy image hosting solution for everyone.">
+    <meta name="keywords" content="image hosting, image hosting service, multiple image hosting, unlimited bandwidth, quick image hosting">
+    <base href="http://www.desipics4u.com/">
+    <link rel="shortcut icon" href="css/images/favicon.ico">
+    <link href="css/style.css" rel="stylesheet" type="text/css" media="screen">
+    <script type="text/javascript" src="source/includes/scripts/jquery.js"></script>
+    <script type="text/javascript" src="source/includes/scripts/genjscript.js"></script>
+    <script type="text/javascript" src="source/includes/scripts/phpjs_00029.js"></script>
+    <script type="text/javascript" src="source/includes/scripts/jquery.jdMenu.js"></script>
+    <script type="text/javascript" src="source/includes/scripts/jquery.bgiframe.js"></script>
+    <script type="text/javascript" src="source/includes/scripts/jquery.positionBy.js"></script>
+    <script type="text/javascript" src="source/includes/scripts/jquery.dimensions.js"></script>
 </head>
 <body class="page_cell">
 	<div class="logo">&nbsp;</div>
@@ -23,52 +29,61 @@
 			<li><a href="info.php?act=about_us">About Us</a></li>
 			<li><a href="info.php?act=rules">Terms of Service</a></li>
 			<li><a href="gallery.php">Public Gallery</a></li>
-			<li><a href="contact.php?act=file_report">Report File(s)</a></li>
+			<li><a href="contact.php?act=file_report">Report Abuse</a></li>
+			<li><a href="tools.php">Tools</a></li>
 			<li><a href="index.php?do_random=true">Random Image</a></li>
-			<li><!-- AddThis Bookmark Button BEGIN -->
-		<script type="text/javascript">
-		  addthis_url    = location.href;   
-		  addthis_title  = document.title;  
-		  addthis_pub    = "mihalismmh";     
-		</script>
-		<script type="text/javascript" src="http://s7.addthis.com/js/addthis_widget.php?v=12"></script>
-		<!-- AddThis Bookmark Button END --></li>
 		</ul>
 	</div>
 	<div class="members_bar">
 					<div class="guest_links">
 				Welcome Guest
-				( <a href="javascript:void(0);" onclick="javascript:toggle_lightbox('users.php?act=login&amp;return=aHR0cDovL3d3dy5kZXNpcGljczR1LmNvbS9pbmZvLnBocD9hY3Q9cHJpdmFjeV9wb2xpY3k=', 'login_lightbox');">Log In</a> | 
-				<a href="javascript:void(0);" onclick="javascript:toggle_lightbox('users.php?act=register&amp;return=aHR0cDovL3d3dy5kZXNpcGljczR1LmNvbS9pbmZvLnBocD9hY3Q9cHJpdmFjeV9wb2xpY3k=', 'register_lightbox');">Register</a> )
+				( <a href="javascript:void(0);" onclick="toggle_lightbox('users.php?act=login', 'login_lightbox');">Log In</a> | 
+				<a href="users.php?act=register&amp;return=aHR0cDovL3d3dy5kZXNpcGljczR1LmNvbS9pbmZvLnBocD9hY3Q9cHJpdmFjeV9wb2xpY3k=">Register</a> )
 			</div>
-			</div><center><!--Start Etology Code-->
+			</div>
+	<center><!-- begin Ad World Media for channel: Hosting , publisher: 3467 http://desipics4u.com , Ad Dimension: Super Banner - 728 x 90 -->
+<script language="javascript">
+document.write('<iframe src="http://newt1.adultadworld.com/jsc/z5/ff2.html?n=607;c=2458;s=17192;d=14;w=728;h=90;p=17192" frameborder=0 marginheight=0 marginwidth=0 scrolling="no" allowTransparency="true" width=728 height=90></iframe>');
+</script><iframe src="http://newt1.adultadworld.com/jsc/z5/ff2.html?n=607;c=2458;s=17192;d=14;w=728;h=90;p=17192" frameborder="0" marginheight="0" marginwidth="0" scrolling="no" allowtransparency="true" width="728" height="90"></iframe>
+<!-- end Ad World Media for channel: Hosting , publisher: 3467 http://desipics4u.com , Ad Dimension: Super Banner - 728 x 90 -->
+	<!-- BEGIN STANDARD TAG - 728 x 90 - ROS: Run-of-site - DO NOT MODIFY -->
+<iframe frameborder="0" marginwidth="0" marginheight="0" scrolling="NO" width="728" height="90" src="http://ad.media-servers.net/st?ad_type=iframe&amp;ad_size=728x90&amp;section=295594"></iframe>
+<!-- END TAG -->
+<!--Start Etology Code-->
 <script language="javascript" type="text/javascript" charset="utf-8" src="http://pages.etology.com/js2/6008.php"></script>
 <!--End Etology Code--></center>
 	<div id="page_body" class="page_body">
-
+        <noscript>
+            <div class="message_box">
+                <h1>JavaScript Disabled!</h1><br />
+                Your browser currently has JavaScript disabled or does not support it. <br />
+                Since this website uses JavaScript extensively it is recommended to <a href="https://www.google.com/adsense/support/bin/answer.py?hl=en&amp;answer=12654">enable it</a>.
+            </div><hr />
+        </noscript>
 
 When you sign up for an account with Desi Pics 4 U, we collect personal information from you including 
-your e-mail address, and a password.
+your email address and a password.
 <br><br>
-We may also collect the URL from which you linked into our site, your IP address, and your browser type and version, all of which are collected in an 
+We may also collect the URL from which you linked into our site, your IP address, and your browser type and version. All of which are collected in an 
 anonymous manner without being linked to any of your personal information.
 <br><br>
 User privacy is something we take very seriously at Desi Pics 4 U. We do not, and have never, sold or disseminated (except in 
-cases where required to by law by law enforcement agencies) the personal information of our users to any parties outside of Desi Pics 4 U. We use 
-account information for the purposes of creating and maintaining individual user accounts, contacting users  in case of a problem with their account, 
-sending personal information, for statistical purposes, to administer our systems, to conduct surveys, to administer drawings or contests, and to provide 
+cases where required to by law enforcement agencies) the personal information of our users to any parties outside of Desi Pics 4 U. We use 
+account information for the purposes of creating and maintaining individual user accounts, contacting a user in case of a problem with their account, 
+for statistical purposes, to administer our systems, to conduct surveys, to administer drawings or contests, and to provide 
 technical support. All of our development is done in-house, and hence no contracted parties will ever have access to individual account information. 
 <br><br>
 If you have any question, please do not hesitate to <a href="contact.php?act=contact_us">contact us</a>.
 
 	</div>
 	<div class="page_footer">
-		Powered by <a href="http://www.mihalism.com/product/mmh/">Mihalism Multi Host</a> |
+		Powered by <a href="http://www.mihalism.net/multihost/">Mihalism Multi Host</a> |
 		<a href="info.php?act=privacy_policy">Privacy Policy</a> | 
 		<a href="contact.php?act=contact_us">Contact Us</a> |
-		<a href="http://www.desimasala4u.com">Desi Masala</a> 
-		| Page Views: 30,978,175
-	</div><center><!-- Begin: Black Label Ads, Generated: 2008-09-25 0:10:25 --> 
+		<script type="text/javascript" src="http://s7.addthis.com/js/addthis_widget.php?v=12"></script>
+		| Page Views: 48,800,135 | Page Load: 0.007 secs
+	</div>
+	<center><!-- Begin: Black Label Ads, Generated: 2008-09-25 0:10:25 --> 
 <script type="text/javascript">
 var AdBrite_Title_Color = '0000FF';
 var AdBrite_Text_Color = '000000';
@@ -77,8 +92,29 @@ var AdBrite_Border_Color = 'CCCCCC';
 var AdBrite_URL_Color = '008000';
 try{var AdBrite_Iframe=window.top!=window.self?2:1;var AdBrite_Referrer=document.referrer==''?document.location:document.referrer;AdBrite_Referrer=encodeURIComponent(AdBrite_Referrer);}catch(e){var AdBrite_Iframe='';var AdBrite_Referrer='';}
 </script>
-<span style="white-space:nowrap;"><script type="text/javascript">document.write(String.fromCharCode(60,83,67,82,73,80,84));document.write(' src="http://ads.adbrite.com/mb/text_group.php?sid=854713&zs=3732385f3930&ifr='+AdBrite_Iframe+'&ref='+AdBrite_Referrer+'" type="text/javascript">');document.write(String.fromCharCode(60,47,83,67,82,73,80,84,62));</script><script src="http://ads.adbrite.com/mb/text_group.php?sid=854713&amp;zs=3732385f3930&amp;ifr=1&amp;ref=https%3A%2F%2Fweb.archive.org%2Fweb%2F20090621143245id_%2Fhttp%253A%2F%2Fwww.desipics4u.com%2Finfo.php%253Fact%253Dprivacy_policy" type="text/javascript"></script><a target="_top" href="http://www.adbrite.com/mb/commerce/purchase_form.php?opid=854713&amp;afsid=55544"><img src="http://files.adbrite.com/mb/images/adbrite-your-ad-here-leaderboard.gif" style="background-color:#CCCCCC;border:none;padding:0;margin:0;" alt="Your Ad Here" width="14" height="90" border="0"></a></span>
+<span style="white-space:nowrap;"><script type="text/javascript">document.write(String.fromCharCode(60,83,67,82,73,80,84));document.write(' src="http://ads.adbrite.com/mb/text_group.php?sid=854713&zs=3732385f3930&ifr='+AdBrite_Iframe+'&ref='+AdBrite_Referrer+'" type="text/javascript">');document.write(String.fromCharCode(60,47,83,67,82,73,80,84,62));</script><script src="http://ads.adbrite.com/mb/text_group.php?sid=854713&amp;zs=3732385f3930&amp;ifr=1&amp;ref=https%3A%2F%2Fweb.archive.org%2Fweb%2F20091003101530id_%2Fhttp%253A%2F%2Fwww.desipics4u.com%2Finfo.php%253Fact%253Dprivacy_policy" type="text/javascript"></script><a target="_top" href="http://www.adbrite.com/mb/commerce/purchase_form.php?opid=854713&amp;afsid=55544"><img src="http://files.adbrite.com/mb/images/adbrite-your-ad-here-leaderboard.gif" style="background-color:#CCCCCC;border:none;padding:0;margin:0;" alt="Your Ad Here" width="14" height="90" border="0"></a></span>
 <!-- End: Black Label Ads --></center>
+    		<script type="text/javascript">
+            google_stats("UA-10349600-1");
+        </script>
+        <!-- Start of StatCounter Code -->
+<script type="text/javascript">
+var sc_project=5157999; 
+var sc_invisible=0; 
+var sc_partition=54; 
+var sc_click_stat=1; 
+var sc_security="72c45ae7"; 
+var sc_text=1; 
+</script>
+
+<script type="text/javascript" src="http://www.statcounter.com/counter/counter.js"></script><noscript><div
+class="statcounter"><a title="wordpress com stats plugin"
+href="http://www.statcounter.com/wordpress.com/"
+target="_blank"><img class="statcounter"
+src="http://c.statcounter.com/5157999/0/72c45ae7/0/"
+alt="wordpress com stats plugin" ></a></div></noscript>
+<!-- End of StatCounter Code -->
+<script type="text/javascript" src="http://widgets.amung.us/colored.js"></script><script type="text/javascript">WAU_colored('j23din60jbj7', '00adef000000')</script>
 
 
-<!-- Powered by Mihalism Multi Host - Copyright (c) 2007, 2008 Mihalism, Inc. (www.mihalism.com) --></body></html>
+<!-- Powered by Mihalism Multi Host - Copyright (c) 2007, 2008, 2009 Mihalism Technologies (www.mihalism.net) --></body></html>
