--- a/f/fu/fun/funology.com.html
+++ b/f/fu/fun/funology.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the funology.com privacy policy that was archived on 2009-06-26.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090626163343id_/http%3A//www.funology.com/about/privacy.cfm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the funology.com privacy policy that was archived on 2009-10-11.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20091011023810id_/http%3A//www.funology.com/about/privacy.cfm) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html><head>
 
@@ -26,7 +26,7 @@
 
 
  
- 
+
  
 
 <table id="header" cellpadding="0" cellspacing="0" border="0">
@@ -48,7 +48,7 @@ rnum=Math.round(Math.random() * 100000);
 ts=String.fromCharCode(60);
 if (window.self != window.top) {nf=''} else {nf='NF/'};
 document.write(ts+'script src="http://www.burstnet.com/cgi-bin/ads/ad17239a.cgi/v=2.3S/sz=468x60A|728x90A/'+rnum+'/'+nf+'RETURN-CODE/JS/">'+ts+'/script>');
-</script><script src="http://www.burstnet.com/cgi-bin/ads/ad17239a.cgi/v=2.3S/sz=468x60A|728x90A/19602/NF/RETURN-CODE/JS/"></script><noscript><a href="http://www.burstnet.com/ads/ad17239a-map.cgi/ns/v=2.3S/sz=468x60A|728x90A/" target="_top">
+</script><script src="http://www.burstnet.com/cgi-bin/ads/ad17239a.cgi/v=2.3S/sz=468x60A|728x90A/91679/NF/RETURN-CODE/JS/"></script><noscript><a href="http://www.burstnet.com/ads/ad17239a-map.cgi/ns/v=2.3S/sz=468x60A|728x90A/" target="_top">
 <img src="http://www.burstnet.com/cgi-bin/ads/ad17239a.cgi/ns/v=2.3S/sz=468x60A|728x90A/" border="0" alt="Click Here" /></a>
 </noscript>
 <!-- END MTVN Parents Tribe CODE --> 
@@ -81,6 +81,8 @@ document.write(ts+'script src="http://www.burstnet.com/cgi-bin/ads/ad17239a.cgi/
 	<td></td>
 </tr>
 <tr>
+
+
 	<td id="leftCol" rowspan="3" valign="top">
 		<div id="funFinder">
 <img src="/images/headers/bored.jpg" alt="Mom, I'm Bored!"><br>
@@ -117,10 +119,12 @@ rnum=Math.round(Math.random() * 100000);
 ts=String.fromCharCode(60);
 if (window.self != window.top) {nf=''} else {nf='NF/'};
 document.write(ts+'script src="http://www.burstnet.com/cgi-bin/ads/ad17239a.cgi/v=2.3S/sz=120x600A|160x600A/'+rnum+'/'+nf+'RETURN-CODE/JS/">'+ts+'/script>');
-</script><script src="http://www.burstnet.com/cgi-bin/ads/ad17239a.cgi/v=2.3S/sz=120x600A|160x600A/66980/NF/RETURN-CODE/JS/"></script><noscript><a href="http://www.burstnet.com/ads/ad17239a-map.cgi/ns/v=2.3S/sz=120x600A|160x600A/" target="_top">
+</script><script src="http://www.burstnet.com/cgi-bin/ads/ad17239a.cgi/v=2.3S/sz=120x600A|160x600A/24677/NF/RETURN-CODE/JS/"></script><noscript><a href="http://www.burstnet.com/ads/ad17239a-map.cgi/ns/v=2.3S/sz=120x600A|160x600A/" target="_top">
 <img src="http://www.burstnet.com/cgi-bin/ads/ad17239a.cgi/ns/v=2.3S/sz=120x600A|160x600A/" border="0" alt="Click Here" /></a>
 </noscript>
 <!-- END MTVN Parents Tribe CODE -->
+
+
 
 
 
@@ -136,6 +140,8 @@ document.write(ts+'script src="http://www.burstnet.com/cgi-bin/ads/ad17239a.cgi/
 	</td>
 
 	<td id="centerCol" valign="top" width="473">
+
+
 
 <div id="contentPad">
 	
@@ -155,7 +161,7 @@ document.write(ts+'script src="http://www.burstnet.com/cgi-bin/ads/ad17239a.cgi/
 	We do not request any credit card or other financial information. While we screen our partners carefully, we are not responsible for the content or safety and privacy practices at any sites linked from our pages. </p>
 	<h2> Third Party Advertising </h2>
 	<p>
-	We use Burst Media and other third-party advertising companies to serve ads when you visit our Web site. These companies may use information (not including your name, address, email address or telephone number) about your visits to this and other Web sites in order to provide advertisements on this site and other sites about goods and services that may be of interest to you. If you would like more information about this practice and to know your choices about not having this information used by these companies, please click here http://www.burstmedia.com/isl/privacy.asp </p>
+	We use Burst Media and other third-party advertising companies to serve ads when you visit our Web site. These companies may use aggregated information (not including your name, address, email address or telephone number) about your visits to this and other Web sites in order to provide advertisements about goods and services of interest to you. If you would like more information about this practice and to know your choices about not having this information used by these companies, visit http://www.quantcast.com/docs/display/legal/Opt-out+of+Quantcast+Delivery or  http://www.networkadvertising.org/managing/opt_out.asp </p>
 	<h2> Third Party Cookies </h2>
 	<p>
 	In the course of serving advertisements to this site, our third-party advertiser may place or recognize a unique “cookie” on your browser. </p>
@@ -199,7 +205,7 @@ rnum=Math.round(Math.random() * 100000);
 ts=String.fromCharCode(60);
 if (window.self != window.top) {nf=''} else {nf='NF/'};
 document.write(ts+'script src="http://www.burstnet.com/cgi-bin/ads/ad17239a.cgi/v=2.3S/sz=300x250A/NZ/'+rnum+'/'+nf+'RETURN-CODE/JS/">'+ts+'/script>');
-</script><script src="http://www.burstnet.com/cgi-bin/ads/ad17239a.cgi/v=2.3S/sz=300x250A/NZ/48772/NF/RETURN-CODE/JS/"></script><noscript><a href="http://www.burstnet.com/ads/ad17239a-map.cgi/ns/v=2.3S/sz=300x250A/" target="_top">
+</script><script src="http://www.burstnet.com/cgi-bin/ads/ad17239a.cgi/v=2.3S/sz=300x250A/NZ/2937/NF/RETURN-CODE/JS/"></script><noscript><a href="http://www.burstnet.com/ads/ad17239a-map.cgi/ns/v=2.3S/sz=300x250A/" target="_top">
 <img src="http://www.burstnet.com/cgi-bin/ads/ad17239a.cgi/ns/v=2.3S/sz=300x250A/" border="0" alt="Click Here" /></a>
 </noscript>
 <!-- END MTVN Parents Tribe CODE -->
@@ -247,14 +253,14 @@ document.write(ts+'script src="http://www.burstnet.com/cgi-bin/ads/ad17239a.cgi/
 		<tr>
 		<td width="30">
 		
-			<a href="/myarcade/detail.cfm?go=1931">
+			<a href="/mylaboratory/detail.cfm?go=1198">
 			<img src="/images/site/3.jpg" alt=""></a>
 		</td>
 		
 				
 
 			<td>
-			<a href="/arcade/detail.cfm?go=1931">Mini Golf</a>
+			<a href="/laboratory/detail.cfm?go=1198">Burping Bottle</a>
 			</td>
 		</tr>
 	
@@ -275,14 +281,14 @@ document.write(ts+'script src="http://www.burstnet.com/cgi-bin/ads/ad17239a.cgi/
 		<tr>
 		<td width="30">
 		
-			<a href="/mygames/detail.cfm?go=80">
+			<a href="/mygames/detail.cfm?go=378">
 			<img src="/images/site/5.jpg" alt=""></a>
 		</td>
 		
 				
 
 			<td>
-			<a href="/games/detail.cfm?go=80">Alphabet Animal Game</a>
+			<a href="/games/detail.cfm?go=378">Treasure Hunt</a>
 			</td>
 		</tr>
 	
@@ -296,7 +302,7 @@ document.write(ts+'script src="http://www.burstnet.com/cgi-bin/ads/ad17239a.cgi/
 <tbody><tr>
 <td>
 <p>
-Your thigh bone is stronger than concrete. 
+Roast turkey did not appear consistently on royal Christmas Day menus until 1851 when it replaced roast swan. The medieval dish of Boar's head remained popular with Royals for much longer. 
 </p>
 </td></tr>
 </tbody></table>
