--- a/i/in/int/intel.com.html
+++ b/i/in/int/intel.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the intel.com privacy policy that was archived on 2009-06-28.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090628011916id_/http%3A//www.intel.com/sites/sitewide/en_US/privacy/privacy.htm%3Fiid%3Dftr%2Bprivacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the intel.com privacy policy that was archived on 2009-10-12.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20091012080550id_/http%3A//www.intel.com/sites/sitewide/en_US/privacy/privacy.htm%3Fiid%3Dftr%2Bprivacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd"><html lang="en-us"><head>
 				<title>Intel® Online Privacy Notice Summary</title>
@@ -28,7 +28,7 @@
 	<body id="three-zero">
 		<a class="hidden" href="#content">Skip to content</a>
 		
-<!--14/05/2009 15:54:28 : 59.0-->
+<!--15/09/2009 16:36:29 : 63.2-->
 <link rel="stylesheet" type="text/css" id="HATlinkStyle" href="http://www.intel.com/sites/sitewide/HAT/30recode/css/ltr_header.css">
 <script type="text/javascript" src="http://www.intel.com/sites/sitewide/HAT/30recode/js/header.js"> </script>
 <script type="text/javascript">
@@ -71,11 +71,284 @@
         }
             ]
             }
+
             /* ]]> */
         </script>
+<script type="text/javascript">
+                /* <![CDATA[ */
+
+                HAT.languages = {
+                changeTxt: 'Change',
+                countries: [
+                
+        {
+        name: 'United Kingdom - English',
+        localizedCountry: 'United Kingdom'
+        },
+        {
+        name: 'Saudi Arabia - English',
+        localizedCountry: 'Saudi Arabia'
+        },
+        {
+        name: 'South Africa - English',
+        localizedCountry: 'South Africa'
+        },
+        {
+        name: 'France - French',
+        localizedCountry: 'France'
+        },
+        {
+        name: 'Spain - Spanish',
+        localizedCountry: 'España'
+        },
+        {
+        name: 'Germany - German',
+        localizedCountry: 'Deutschland'
+        },
+        {
+        name: 'Hungary - Hungarian',
+        localizedCountry: 'Magyarország'
+        },
+        {
+        name: 'Italy - Italian',
+        localizedCountry: 'Italia'
+        },
+        {
+        name: 'Poland - Polish',
+        localizedCountry: 'Polska'
+        },
+        {
+        name: 'Sweden - English',
+        localizedCountry: 'Sweden'
+        },
+        {
+        name: 'Turkey - Turkish',
+        localizedCountry: 'Türkiye'
+        },
+        {
+        name: 'Russia - Russian',
+        localizedCountry: 'Россия'
+        },
+        {
+        name: 'UAE - Arabic',
+        localizedCountry: 'دولة الامارات العربية المتحدة'
+        },
+        {
+        name: 'Saudi Arabia - Arabic',
+        localizedCountry: 'المملكة العربية السعودية'
+        },
+        {
+        name: 'Egypt - Arabic',
+        localizedCountry: 'مصر'
+        },
+        {
+        name: 'Czech Republic - Czech',
+        localizedCountry: 'Česká republika'
+        },
+        {
+        name: 'Israel - Hebrew',
+        localizedCountry: 'ישראל'
+        },
+        {
+        name: 'Netherlands - Dutch',
+        localizedCountry: 'Nederlanden'
+        },
+        {
+        name: 'Romania - English',
+        localizedCountry: 'Romania'
+        },
+        {
+        name: 'Sweden - Swedish',
+        localizedCountry: 'Sverige'
+        },
+        {
+        name: 'Ukraine - Ukrainian',
+        localizedCountry: 'Україна'
+        },
+        {
+        name: 'Indonesia - English',
+        localizedCountry: 'Indonesia'
+        },
+        {
+        name: 'Thailand - Thai',
+        localizedCountry: 'ประเทศไทย'
+        },
+        {
+        name: 'Vietnam - English',
+        localizedCountry: 'Vietnam'
+        },
+        {
+        name: 'Korea - Korean',
+        localizedCountry: '한국'
+        },
+        {
+        name: 'Singapore - English',
+        localizedCountry: 'Singapore'
+        },
+        {
+        name: 'Asia Pacific - English',
+        localizedCountry: 'Asia Pacific'
+        },
+        {
+        name: 'China - Simplified Chinese',
+        localizedCountry: '中国'
+        },
+        {
+        name: 'Taiwan - Traditional Chinese',
+        localizedCountry: '台灣'
+        },
+        {
+        name: 'India - English',
+        localizedCountry: 'India'
+        },
+        {
+        name: 'Australia - English',
+        localizedCountry: 'Australia'
+        },
+        {
+        name: 'Japan - Japanese',
+        localizedCountry: '日本'
+        },
+        {
+        name: 'Mexico - Spanish',
+        localizedCountry: 'Mexico'
+        },
+        {
+        name: 'Latin America - Spanish',
+        localizedCountry: 'América Latina'
+        },
+        {
+        name: 'Brazil - Portuguese',
+        localizedCountry: 'Brasil'
+        },
+        {
+        name: 'United States - English',
+        localizedCountry: 'United States'
+        },
+        {
+        name: 'Argentina - Spanish',
+        localizedCountry: 'Argentina'
+        },
+        {
+        name: 'Austria - German',
+        localizedCountry: 'Österreich'
+        },
+        {
+        name: 'Belgium – French',
+        localizedCountry: 'Belgique'
+        },
+        {
+        name: 'Belgium – Netherlands',
+        localizedCountry: 'België'
+        },
+        {
+        name: 'Belgium â French',
+        localizedCountry: 'Belgique'
+        },
+        {
+        name: 'Belgium â Netherlands',
+        localizedCountry: 'België'
+        },
+        {
+        name: 'Bolivia - Spanish',
+        localizedCountry: 'Bolivia'
+        },
+        {
+        name: 'Canada - English',
+        localizedCountry: 'Canada'
+        },
+        {
+        name: 'Canada - French',
+        localizedCountry: 'Canada'
+        },
+        {
+        name: 'Chile - Spanish',
+        localizedCountry: 'Chile'
+        },
+        {
+        name: 'Colombia - Spanish',
+        localizedCountry: 'Colombia'
+        },
+        {
+        name: 'Costa Rica - Spanish',
+        localizedCountry: 'Costa Rica'
+        },
+        {
+        name: 'Czech Republic - English',
+        localizedCountry: 'Czech Republic'
+        },
+        {
+        name: 'Egypt - English',
+        localizedCountry: 'Egypt'
+        },
+        {
+        name: 'Hong Kong - English',
+        localizedCountry: 'Hong Kong'
+        },
+        {
+        name: 'Hungary - English',
+        localizedCountry: 'Hungary'
+        },
+        {
+        name: 'Ireland - English',
+        localizedCountry: 'Ireland'
+        },
+        {
+        name: 'Malaysia - English',
+        localizedCountry: 'Malaysia'
+        },
+        {
+        name: 'Middle East - English',
+        localizedCountry: 'Middle East'
+        },
+        {
+        name: 'Middle East - Arabic',
+        localizedCountry: 'الشرق الأوسط'
+        },
+        {
+        name: 'New Zealand - English',
+        localizedCountry: 'New Zealand'
+        },
+        {
+        name: 'Pakistan - English',
+        localizedCountry: 'Pakistan'
+        },
+        {
+        name: 'Peru - Spanish',
+        localizedCountry: 'Perú'
+        },
+        {
+        name: 'Philippines - English',
+        localizedCountry: 'Philippines'
+        },
+        {
+        name: 'Switzerland - German',
+        localizedCountry: 'Schweiz'
+        },
+        {
+        name: 'United Arab Emirates - English',
+        localizedCountry: 'United Arab Emirates'
+        },
+        {
+        name: 'United Arab Emirates - Arabic',
+        localizedCountry: 'دولة الامارات العربية المتحدة'
+        },
+        {
+        name: 'Uruguay - Spanish',
+        localizedCountry: 'Uruguay'
+        },
+        {
+        name: 'Venezuela - Spanish',
+        localizedCountry: 'Venezuela'
+        }
+                ]
+                }
+
+                /* ]]> */
+            </script>
 <div id="HAT-globalheader" class=" HAT-wide HAT-font1">
   <div class="HAT-wrap">
-    <a id="logo_link" href="http://www.intel.com/index.htm?iid=hdr+logo" class="logo"><img src="http://www.intel.com/sites/sitewide/HAT/30recode/pix/intlogo.gif" border="0" alt="Logo - Intel" title="Logo - Intel" id="logo_img"></a>
+    <a id="logo_link" href="http://www.intel.com/index.htm" class="logo"><img src="http://www.intel.com/sites/sitewide/HAT/30recode/pix/intlogo.gif" border="0" alt="Logo - Intel" title="Logo - Intel" id="logo_img"></a>
     <ul>
       <li id="HAT-gh0">
         <a href="http://www.intel.com/business/index.htm?iid=hdr+work">Work</a>
@@ -84,13 +357,13 @@
         <a href="http://www.intel.com/consumer/index.htm?iid=hdr+play">Play</a>
       </li>
       <li id="HAT-gh2">
-        <a href="http://www.intel.com/support/index.htm?iid=hdr+support">Support</a>
+        <a href="http://www.intel.com/p/en_US/support?iid=hdr+support">Support</a>
       </li>
       <li id="HAT-gh3">
         <a href="http://www.intel.com/intel/index.htm?iid=hdr+about">About Intel</a>
       </li>
       <li id="HAT-gh4">
-        <a href="http://www.intel.com/intel/nav/locator.htm?iid=hdr+location">Change Location</a>
+        <a href="http://www.intel.com/en_US/worldwide.htm?iid=hdr+location">Change Location</a>
       </li>
       <li class="search">
         <form method="get" name="FORMSearchHeader" id="FORMSearchHeader" action="http://mysearch.intel.com/corporate/default.aspx">
@@ -102,7 +375,7 @@
             </span>
             <input type="hidden" name="category" id="category">
             <input type="hidden" name="adv" id="adv">
-            <input type="hidden" name="value" id="value"><input class="searchbutton" type="image" name="searchsubmit" src="http://www.intel.com/sites/sitewide/HAT/30recode/pix/searchbtn_en.gif" id="searchsubmit" alt="Search" title="Search"></fieldset>
+            <input type="hidden" name="value" id="value"><input class="searchbutton" type="image" name="searchsubmit" src="http://www.intel.com/sites/sitewide/HAT/30recode/pix/en_US/searchbtn.gif" id="searchsubmit" alt="Search" title="Search"></fieldset>
         </form>
       </li>
     </ul>
@@ -115,7 +388,7 @@
 <!-- /onsite tracking code -->
 
 		
-<!--14/05/2009 15:54:28 : 59.0-->
+<!--15/09/2009 16:36:29 : 63.2-->
 <div id="HAT-subheader" class="subheaderId-HAT-gh HAT-wide HAT-font1"> </div>
 <div class="HAT-clear"> </div>
 
@@ -137,28 +410,25 @@
 							<option value="" selected="selected">Select a language...</option>
 							﻿							<option value="/sites/sitewide/ar_AE/privacy/privacy.htm">عربي</option>
 							<option value="/sites/sitewide/cs_CZ/privacy/privacy.htm">Čeština</option>
-							<option value="/sites/danish/privacy.htm">Dansk</option>
 							<option value="/sites/sitewide/de_DE/privacy/privacy.htm">Deutsch</option>
 							<option value="/sites/sitewide/en_US/privacy/privacy.htm">English</option>
-							<option value="/sites/sitewide/es_LA/privacy/privacy.htm">Español - América</option>
 							<option value="/sites/sitewide/es_ES/privacy/privacy.htm">Español - España</option>
-							<option value="/sites/finnish/privacy.htm">Suomi</option>
+							<option value="/sites/sitewide/es_LA/privacy/privacy.htm">Español - América</option>
 							<option value="/sites/sitewide/fr_FR/privacy/privacy.htm">Français</option>
-							<option value="/sites/greek/privacy.htm">ελληνικά</option>
 							<option value="/sites/sitewide/he_IL/privacy/privacy.htm">עברית</option>
 							<option value="/sites/sitewide/hu_HU/privacy/privacy.htm">Magyar</option>
 							<option value="/sites/sitewide/id_ID/privacy/privacy.htm">Bahasa Indonesia</option>
+							<option value="/sites/sitewide/it_IT/privacy/privacy.htm">Italiano</option>
 							<option value="/sites/sitewide/ja_JP/privacy/privacy.htm">日本語</option>
 							<option value="/sites/sitewide/ko_KR/privacy/privacy.htm">한국어</option>
-							<option value="/sites/sitewide/it_IT/privacy/privacy.htm">Italiano</option>
 							<option value="/sites/sitewide/nl_NL/privacy/privacy.htm">Nederlands</option>
 							<option value="/sites/sitewide/pl_PL/privacy/privacy.htm">Polski</option>
 							<option value="/sites/sitewide/pt_BR/privacy/privacy.htm">Português</option>
 							<option value="/sites/sitewide/ro_RO/privacy/privacy.htm">Româneşte</option>
 							<option value="/sites/sitewide/ru_RU/privacy/privacy.htm">Русский</option>
+							<option value="/sites/sitewide/sv_SE/privacy/privacy.htm">Svenska</option>
 							<option value="/sites/sitewide/th_TH/privacy/privacy.htm">ไทย</option>
 							<option value="/sites/sitewide/tr_TR/privacy/privacy.htm">Türkçe</option>
-							<option value="/sites/sitewide/sv_SE/privacy/privacy.htm">Svenska</option>
 							<option value="/sites/sitewide/uk_UA/privacy/privacy.htm">Українська мова</option>
 							<option value="/sites/sitewide/vi_VN/privacy/privacy.htm">Tiếng Việt</option>
 							<option value="/sites/sitewide/zh_CN/privacy/privacy.htm">中文 （简体） ‎</option>
@@ -321,7 +591,7 @@ function GetPageName(pagename){
 }
 
 </script>
-<script type="text/javascript" src="/scripts-include/wa/wa_process.js"></script><img name="s_i_intelcorperror" height="1" width="1" border="0" alt="" src="https://102.112.2O7.net/b/ss/intelcorperror/1/G.9-Pd-R/s85690231166369?[AQB]&amp;ndh=1&amp;t=30/0/2020%202%3A22%3A26%204%200&amp;pageName=cim%3A/web/20090628011916id_/http%253a//www.intel.com/sites/sitewide/en_us/privacy/privacy.htm%253fiid%253dftr%252bprivacy&amp;g=https%3A//web.archive.org/web/20090628011916id_/http%253A//www.intel.com/sites/sitewide/en_US/privacy/privacy.htm%253Fiid%253Dftr%252Bprivacy&amp;ch=cim&amp;events=event5&amp;cc=USD&amp;c1=cim%3A%20business&amp;h1=cim%7Ccim%3A%20business%7Ccim%3A%20business%3A%20unassigned%7Ccim%3A%20business%3A%20unassigned%3A%20unassigned%7Ccim%3A%20business%3A%20unassigned%3A%20unassigned%3A%20unassigned%7C/web/20090628011916id_/http%253a//www.intel.com/sites/sitewide/en_us/privacy/privacy.htm%253fiid%253dftr%252bprivacy&amp;c2=cim%3A%20business%3A%20unassigned&amp;c3=cim%3A%20business%3A%20unassigned%3A%20unassigned&amp;c4=asmo-na&amp;c5=eng&amp;c7=intelcorpcim%2Cintelcorpbus&amp;c8=https%3A//web.archive.org/web/20090628011916id_/http%3A//www.intel.com/sites/sitewide/en_US/privacy/privacy.htm%3Fiid%3Dftr%2Bprivacy&amp;c9=%7Bb75ef0e7-9548-29b0-1b46-a13e4b4dc70b%7D&amp;s=800x600&amp;c=24&amp;j=1.3&amp;v=N&amp;k=Y&amp;bw=1366&amp;bh=768&amp;[AQE]">
+<script type="text/javascript" src="/scripts-include/wa/wa_process.js"></script><img name="s_i_intelcorperror" height="1" width="1" border="0" alt="" src="https://102.112.2O7.net/b/ss/intelcorperror/1/G.9-Pd-R/s81090297521850?[AQB]&amp;ndh=1&amp;t=30/0/2020%202%3A22%3A29%204%200&amp;pageName=cim%3A/web/20091012080550id_/http%253a//www.intel.com/sites/sitewide/en_us/privacy/privacy.htm%253fiid%253dftr%252bprivacy&amp;g=https%3A//web.archive.org/web/20091012080550id_/http%253A//www.intel.com/sites/sitewide/en_US/privacy/privacy.htm%253Fiid%253Dftr%252Bprivacy&amp;ch=cim&amp;events=event5&amp;cc=USD&amp;c1=cim%3A%20business&amp;h1=cim%7Ccim%3A%20business%7Ccim%3A%20business%3A%20unassigned%7Ccim%3A%20business%3A%20unassigned%3A%20unassigned%7Ccim%3A%20business%3A%20unassigned%3A%20unassigned%3A%20unassigned%7C/web/20091012080550id_/http%253a//www.intel.com/sites/sitewide/en_us/privacy/privacy.htm%253fiid%253dftr%252bprivacy&amp;c2=cim%3A%20business%3A%20unassigned&amp;c3=cim%3A%20business%3A%20unassigned%3A%20unassigned&amp;c4=asmo-na&amp;c5=eng&amp;c7=intelcorpcim%2Cintelcorpbus&amp;c8=https%3A//web.archive.org/web/20091012080550id_/http%3A//www.intel.com/sites/sitewide/en_US/privacy/privacy.htm%3Fiid%3Dftr%2Bprivacy&amp;c9=%7B6262da99-2ddf-4c51-829e-e4abe35ae2d1%7D&amp;s=800x600&amp;c=24&amp;j=1.3&amp;v=N&amp;k=Y&amp;bw=1366&amp;bh=768&amp;[AQE]">
 <!-- End WA code version: 1.0 -->
 
 
@@ -388,7 +658,7 @@ function GetPageName(pagename){
 		</div>
 		<div class="endfloat"></div>
 		
-<!--14/05/2009 15:54:28 : 59.0-->
+<!--15/09/2009 16:36:29 : 63.2-->
 <div id="HAT-unifiedfooter" class=" HAT-wide HAT-font1">
   <ul class="HAT-footer-first-child">
     <li>
@@ -415,7 +685,7 @@ function GetPageName(pagename){
       <a href="http://www.intel.com/sites/sitewide/en_US/termsofuse.htm?iid=ftr+terms">Terms of Use</a>
     </li>
     <li>
-      <a href="http://www.intel.com/sites/corporate/tradmarx.htm?iid=ftr+trademark">*Trademarks</a>
+      <a href="http://www.intel.com/sites/sitewide/en_US/tradmarx.htm?iid=ftr+trademark">*Trademarks</a>
     </li>
     <li>
       <a href="http://www.intel.com/sites/sitewide/en_US/privacy/privacy.htm?iid=ftr+privacy">Privacy</a>
